--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,11 @@ h1 {
   margin-left:10px;
 } 
 
+.makeBig{
+  text-align: center;
+  font-size: 500%; 
+}
+
 #time{
   display: grid;
   grid-template-columns: auto auto auto;
