--- a/styles.css
+++ b/styles.css
@@ -24,11 +24,19 @@ h1 {
   margin-top: 0;
   margin-left:10px;
 } 
+/* reserved for js addedd css*/
 
 .makeBig{
   text-align: center;
   font-size: 500%; 
 }
+
+.makeWhite{
+  text-shadow: 2px 2px 6px black;
+  color: white;
+}
+
+/*end js css for title*/
 
 #time{
   display: grid;
@@ -73,6 +81,10 @@ h4 {
   border-bottom: double 2px #5971BC;
 }
 
+h4:hover{
+  color: white;
+} 
+
 p.sub {
   margin-top: 0;
   margin-bottom: 0;
@@ -89,6 +101,7 @@ li{
   font-size: 110%;
 }
 
+}
 span.emphasize {
   font-style: italic;
   font-weight: bold;
