lsit events added

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,25 @@ h1 {
 }
 /* added from my grid set codepen */
 
+
+#gridContainer #ingredients  ul,
+#gridContainer #ingredients  p,
+#gridContainer #equipment  ul,
+#gridContainer #directions ol,
+#gridContainer #directions p{
+  display: none;
+}
+
+/* class demo code 
+#gridContainer #ingredients  .show ul,
+#gridContainer #ingredients .show p,
+#gridContainer #equipment  .show ul,
+#gridContainer #directions .show ol,
+#gridContainer #directions .show p{
+  display: block;
+}
+*/
+
 h4 {
   text-align: center;
   margin-bottom: 0;
